<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollIndicators="right"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:width="40dp"
            android:text="@string/user_login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/activity_login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="25dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/user_login_sign_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_reg" />

            <TextView
                android:id="@+id/txtCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processSignUpLinkClick"
                android:text="@string/activity_login_signUp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>